# ctest_sample

./: CMakeLists.txt  README.md
program/: CMakeLists.txt
program/scal/: CMakeLists.txt  simple_calc.h
program/scal/test/: CMakeLists.txt  test.c
program/smath/: CMakeLists.txt
program/smath/src/: CMakeLists.txt  simple_math.c  simple_math.h
program/smath/test/: CMakeLists.txt  test.c
scal/: CMakeLists.txt  simple_calc.c
smath/: CMakeLists.txt
src/: CMakeLists.txt  simple_calc.c
test/: CMakeLists.txt  test.c
