cmake_minimum_required(VERSION 3.2)
project(CTestSample C)
enable_testing()
add_subdirectory(test)
add_subdirectory(src)

set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_NAME "libscal")
set(CPACK_PACKAGE_VERSION "1")
set(RELEASE "1")
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "dtenpf")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6")
set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst;${CMAKE_CURRENT_SOURCE_DIR}/postrm;" )
set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}-${RELEASE}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE})
include (CPack)
