cmake_minimum_required(VERSION 3.2)
project(Smathe C)
enable_testing()

if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set (CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/opt/ftl" CACHE PATH "default install path" FORCE )
endif()
set(CPACK_PACKAGING_INSTALL_PREFIX "/opt/ftl")

add_subdirectory(test)
add_subdirectory(src)

set(CPACK_DEB_COMPONENT_INSTALL ON)
set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_NAME "libsmath")
set(CPACK_PACKAGE_VERSION "1.1.1")
set(RELEASE "1")
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "dtenpf")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6, libscal")
set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_SOURCE_DIR}/postinst;${CMAKE_CURRENT_SOURCE_DIR}/postrm;" )
set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}-${RELEASE}_${CPACK_DEBIAN_PACKAGE_ARCHITECTURE})
include (CPack)
